--- a/secs/4-NOx_mdl/1-subs/g3.tex
+++ b/secs/4-NOx_mdl/1-subs/g3.tex
@@ -5,7 +5,7 @@
                 &= \lrb{\frac{F(k-1)}{F(k)}}
                                 \lrb{\frac{u_1(k)}{u_1(k-1)}}
                 t_s \phi_1^T(k-1) \theta_{od}
-                \qquad \bm{\because \ref{eqn::residence_time_mdl}, \ref{eqn::k_mdl}}
+                \qquad \bm{\because \ref{eqn::residence_time_mdl}, \ref{eqn::phi_1}}
 \end{align*}
 \begin{align}
         g_{od} &= \lrf{ \lrb{\frac{u_1(k)}{F(k)}} \lrb{\frac{F(k-1)}{u_1(k-1)}} \phi_1^T(k-1) }
