--- a/secs/4-NOx_mdl/1-subs/g4.tex
+++ b/secs/4-NOx_mdl/1-subs/g4.tex
@@ -2,7 +2,7 @@
         g_{scr} &= \lrb{\frac{\tau(k)}{\tau(k-1)}}
                 t_s k_{scr}(k) u_1(k)\\
                 &= \lrb{\frac{F(k-1)}{F(k)}} u_1(k) \phi_1^T(k) \theta_{scr} t_s
-                \qquad \bm{\because \ref{eqn::residence_time_mdl}, \ref{eqn::k_mdl}}
+                \qquad \bm{\because \ref{eqn::residence_time_mdl}, \ref{eqn::phi_1}}
 \end{align*}
 \begin{align}
         g_{scr} &= \lrf{\lrb{\frac{u_1(k)}{F(k)}} F(k-1) \phi_1^T(k)}
