--- a/secs/4-NOx_mdl/1-subs/g0.tex
+++ b/secs/4-NOx_mdl/1-subs/g0.tex
@@ -1,7 +1,7 @@
 \begin{align*}
         g_\Gamma &= t_s k_{s2v} \times \lrf{\Gamma(k-1) \tau(k) u_1(k) \con{NH_3}^{in}(k-1)} \times k_{scr/ads}(k-1)\\
                 &= t_s k_{s2v} \Gamma \times \frac{\tau_0}{F(k)} \times u_1 (k) \times \nu_u \frac{u_2(k-1)}{F(k-1)}\times  \phi_2^T(k-1) \theta_{scr/ads}
-                \qquad \lrb{\because \ref{eqn::residence_time_mdl}, \ref{eqn::urea_mdl}}
+                \qquad \lrb{\because \ref{eqn::residence_time_mdl}, \ref{eqn::urea_mdl}, \ref{eqn::phi_2}}
 \end{align*}
 \begin{align}
         g_\Gamma &= \lrf{ \frac{u_1(k)}{F(k)} \frac{u_2(k-1)}{F(k-1)}  \phi_2^T(k-1) } \times \lrf{ t_s k_{s2v} \nu_u \Gamma \tau_0  \theta_{scr/ads} }
